2022-09-11  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - Periodic: tick() and _fire() now takes a now argument.

	  - I2CDisplay: new set() method to set sensor data independently from
	    scheduled tick updates.


2022-09-11  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/webserver.py:

	  - Added set() and clear() webserver methods for setting and clearing
	    request map.

	  - webserver constructor no longer take request map as argument

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - WS: Use webserver set() method.


2022-09-10  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - WS() will now only do string replacements for variables that are
	    actually referenced by the configured template.


2022-09-09  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/xconfig.py:

	  - Module will no longer automatically parse and load config into
	    internal dict. There is now an option to parse config on demand
	    to sacrifice efficiency for smaller mem footprint.


2022-09-08  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/xtime.py:

	  - Added convenience wrapper functions for taking and comparing time
	    points:

	      - xtime.tp_now(): retuns a time point with ms resolution
	      - xtime.tp_diff(): returns difference in ms between two time
	        points.

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - Use new xtime time point functions.


2022-09-07  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/xtime.py:

	  - Some micropython ports have a fake time.localtime() function that
	    just calls time.gmtime(), some don't. Apply our own TZ data offset
	    implementation only on those that don't.


2022-09-07  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - Now uses time.ticks_*() functions instead of time.time_ns()