@@ -2,6 +2,9 @@
 
 	* apps/clock_sensor/clock_sensor_esp32.py:
 
+	  - I2CDisplay and WS now register their set() methods as listeners
+	    to the sensors.
+
 	  - Periodic: tick() and _fire() now takes a now argument.
 
 	  - I2CDisplay: new set() method to set sensor data independently from
